syntax = "proto3";

import "idlefantasystory/v1/year_type.proto";

package idlefantasystory.v1;

// The story telling service definition.
service StoryService {
  // Retrieves the current state of the world.
  rpc GetWorldState (GetWorldStateRequest) returns (GetWorldStateResponse) {}
}

// Request message for GetWorldState.
message GetWorldStateRequest {
  // The ID of the world.
  string world_id = 1;
}

// Response message for GetWorldState.
message GetWorldStateResponse {
  // The ID of the world.
  string world_id = 1;
  // The name of the world.
  string world_name = 2;
  // Current year of the world.
  YearV1 year = 4;
  // Current day of the year.
  uint32 day_of_year = 5;
}